--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.4",
     "@material-ui/data-grid": "*",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.3.10",
     "axios": "^0.21.1",
     "date-fns": "^2.22.1",
     "debug": "^2.6.9",
@@ -19,7 +21,8 @@
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "swr": "^0.5.6"
+    "swr": "^0.5.6",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "^7.26.0",
