Update deployment to v30 and protect DELETE payment plan endpoint.

--- a/kubernetes/04-ingress.yml
+++ b/kubernetes/04-ingress.yml
@@ -36,3 +36,8 @@ spec:
            "/api/v0/monthly-payments"
          ]
          methods: ["POST"]
+     - operation:
+         paths: [
+           "/api/v0/payment-plan/*",
+         ]
+         methods: ["DELETE"]
