Update deployment to v39.

--- a/kubernetes/04-ingress.yml
+++ b/kubernetes/04-ingress.yml
@@ -40,4 +40,4 @@ spec:
          paths: [
            "/api/v0/payment-plan/*",
          ]
-         methods: ["PATCH", "DELETE"]
+         methods: ["POST", "PATCH", "DELETE"]
