--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "debug": "^2.6.9",
     "mysql": "^2.18.1",
     "next": "^10.2.3",
+    "next-auth": "^3.27.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "swr": "^0.5.6",
