--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
+    "@elastic/elasticsearch": "^7.13.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/data-grid": "*",
     "@material-ui/icons": "^4.11.2",
