Create cron job to index ES.

--- a/kubernetes/05-crons.yml
+++ b/kubernetes/05-crons.yml
@@ -14,7 +14,7 @@ spec:
           restartPolicy: OnFailure
           containers:
           - name: cron
-            image: kieranbamforth/mhawk:11
+            image: kieranbamforth/mhawk:44
             args:
               - dist/cli/main.bundle.js
             env:
@@ -84,7 +84,7 @@ spec:
           restartPolicy: OnFailure
           containers:
           - name: cron
-            image: kieranbamforth/mhawk:11
+            image: kieranbamforth/mhawk:44
             args:
               - dist/cli/dollar.bundle.js
             env:
@@ -127,6 +127,89 @@ spec:
                 value: "https://mhawk.k8s.istio.kieranbamforth.me/api/v0/auth/monzo/callback"
               - name: DEBUG
                 value: mhawk-*
+            resources:
+              limits:
+                memory: "100Mi"
+              requests:
+                cpu: 50m
+                memory: "100Mi"
+            securityContext:
+              readOnlyRootFilesystem: true
+              runAsNonRoot: true
+              runAsUser: 1000
+---
+apiVersion: batch/v1beta1
+kind: CronJob
+metadata:
+  name: mhawk-index
+  namespace: mhawk
+  labels:
+    app.kubernetes.io/name: mhawk
+spec:
+  schedule: "0 * * * *"
+  jobTemplate:
+    spec:
+      template:
+        spec:
+          restartPolicy: OnFailure
+          containers:
+          - name: cron
+            image: kieranbamforth/mhawk:44
+            args:
+              - dist/cli/index.bundle.js
+            env:
+              - name: MYSQL_HOST
+                valueFrom:
+                  secretKeyRef:
+                    name: mhawk-db
+                    key: MYSQL_HOST
+              - name: MYSQL_USER
+                valueFrom:
+                  secretKeyRef:
+                    name: mhawk-db
+                    key: MYSQL_USER
+              - name: MYSQL_PASSWORD
+                valueFrom:
+                  secretKeyRef:
+                    name: mhawk-db
+                    key: MYSQL_PASSWORD
+              - name: MYSQL_DATABASE
+                valueFrom:
+                  secretKeyRef:
+                    name: mhawk-db
+                    key: MYSQL_DATABASE
+              - name: MYSQL_PORT
+                valueFrom:
+                  secretKeyRef:
+                    name: mhawk-db
+                    key: MYSQL_PORT
+              - name: DEBUG
+                value: mhawk-*
+              - name: ES_INDEX
+                valueFrom:
+                  secretKeyRef:
+                    name: mhawk-es
+                    key: ES_INDEX
+              - name: ES_USERNAME
+                valueFrom:
+                  secretKeyRef:
+                    name: mhawk-es
+                    key: ES_USERNAME
+              - name: ES_INDEX
+                valueFrom:
+                  secretKeyRef:
+                    name: mhawk-es
+                    key: ES_INDEX
+              - name: ES_PASSWORD
+                valueFrom:
+                  secretKeyRef:
+                    name: mhawk-es
+                    key: ES_PASSWORD
+              - name: ES_ENDPOINT
+                valueFrom:
+                  secretKeyRef:
+                    name: mhawk-es
+                    key: ES_ENDPOINT
             resources:
               limits:
                 memory: "100Mi"
