--- a/kubernetes/02-deployment.yml
+++ b/kubernetes/02-deployment.yml
@@ -67,6 +67,31 @@ spec:
                 value: "https://mhawk.k8s.istio.kieranbamforth.me"
               - name: DEBUG
                 value: mhawk-*
+              - name: ES_INDEX
+                valueFrom:
+                  secretKeyRef:
+                    name: mhawk-es
+                    key: ES_INDEX
+              - name: ES_USERNAME
+                valueFrom:
+                  secretKeyRef:
+                    name: mhawk-es
+                    key: ES_USERNAME
+              - name: ES_INDEX
+                valueFrom:
+                  secretKeyRef:
+                    name: mhawk-es
+                    key: ES_INDEX
+              - name: ES_PASSWORD
+                valueFrom:
+                  secretKeyRef:
+                    name: mhawk-es
+                    key: ES_PASSWORD
+              - name: ES_ENDPOINT
+                valueFrom:
+                  secretKeyRef:
+                    name: mhawk-es
+                    key: ES_ENDPOINT
             resources:
               limits:
                 memory: "400Mi"
