--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@elastic/elasticsearch": "^7.13.0",
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/data-grid": "*",
+    "@material-ui/core": "4.11.4",
+    "@material-ui/data-grid": "^4.0.0-alpha.33",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/pickers": "^3.3.10",
     "axios": "^0.21.1",
