--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "node-inspect": "^2.0.0",
+    "typescript": "^4.3.5",
     "webpack": "^5.37.1",
     "webpack-cli": "^4.7.0"
   }
