Ensure build for Intel.
DigitalOcean does not support ARM.

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -5,6 +5,8 @@ metadata:
 build:
   artifacts:
   - image: kieranbamforth/mhawk
+    custom:
+      buildCommand: ./build.sh
     sync:
       infer:
         - '**/*/*.js'
