--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@elastic/elasticsearch": "^7.13.0",
-    "@material-ui/core": "4.11.4",
-    "@material-ui/data-grid": "^4.0.0-alpha.33",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/pickers": "^3.3.10",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.6",
+    "@mui/styles": "^5.8.6",
+    "@mui/x-data-grid": "^5.12.3",
+    "@mui/x-date-pickers": "^5.0.0-alpha.7",
     "axios": "^0.21.2",
     "date-fns": "^2.22.1",
     "debug": "^2.6.9",
@@ -36,7 +39,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "node-inspect": "^2.0.0",
     "typescript": "^4.3.5",
-    "webpack": "^5.37.1",
-    "webpack-cli": "^4.7.0"
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0"
   }
 }
