--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,18 @@
+---
 version: '3'
+volumes:
+  myapp:
+
 services:
-  app:
-    image: kieranbamforth/mhawk:latest
-    build:
-      context: .
+  db:
+    image: mysql
+    # NOTE: use of "mysql_native_password" is not recommended: https://dev.mysql.com/doc/refman/8.0/en/upgrading-from-previous-series.html#upgrade-caching-sha2-password
+    # (this is just an example, not intended to be a production configuration)
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: example
+    volumes:
+      - myapp:/var/lib/mysql
     ports:
-      - 3000:3000
+      - 3306:3306
