--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "DEBUG='mhawk-*' NODE_OPTIONS='--inspect' next dev",
     "lint": "eslint --ext jsx --ext js .",
     "build": "webpack && next build",
-    "start": "next start"
+    "start": "next start",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
@@ -37,9 +38,14 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
     "node-inspect": "^2.0.0",
     "typescript": "^4.3.5",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
+  },
+  "lint-staged": {
+    "*.{jsx,js,tsx,ts}": "prettier --write ."
   }
 }
