Fix skaffold indent.

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,27 +1,34 @@
+---
 apiVersion: skaffold/v2beta10
 kind: Config
 metadata:
   name: mhawk
 build:
   artifacts:
-  - image: kieranbamforth/mhawk
-    custom:
-      buildCommand: ./build.sh
-    sync:
-      infer:
-        - '**/*/*.js'
-        - '**/*/*.jsx'
-        # - 'components/**/*'
-        # - 'containers/**/*'
-        # - 'hooks/**/*'
-        # - 'lib/**/*'
-        # - 'next.config.js'
-        # - 'pages/**/*'
-        # - 'public/**/*'
-        # - 'styles/**/*'
-        # - 'webpack.config.js'
-        # - '.eslintrc.js'
+    - image: kieranbamforth/mhawk
+      custom:
+        buildCommand: ./build.sh
+      sync:
+        infer:
+          - '**/*/*.js'
+          - '**/*/*.jsx'
+          # - 'components/**/*'
+          # - 'containers/**/*'
+          # - 'hooks/**/*'
+          # - 'lib/**/*'
+          # - 'next.config.js'
+          # - 'pages/**/*'
+          # - 'public/**/*'
+          # - 'styles/**/*'
+          # - 'webpack.config.js'
+          # - '.eslintrc.js'
 deploy:
   kustomize:
     paths:
       - kubernetes/base
+profiles:
+  - name: dev
+    deploy:
+      kustomize:
+        paths:
+          - kubernetes/dev
