--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "node-inspect": "^2.0.0",
+    "prettier": "^2.7.1",
     "typescript": "^4.3.5",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
