--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "eslint --ext jsx --ext js .",
     "build": "webpack && next build",
     "start": "next start",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest"
   },
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
@@ -32,6 +33,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.5",
     "eslint": "^7.26.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.23.2",
@@ -39,9 +41,11 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^8.0.1",
+    "jest": "^29.3.1",
     "lint-staged": "^13.0.3",
     "node-inspect": "^2.0.0",
     "prettier": "^2.7.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.3.5",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
