--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "lint-staged": "^13.0.3",
     "node-inspect": "^2.0.0",
     "prettier": "^2.7.1",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.3.5",
     "webpack": "^5.73.0",
